# books-my-friend-java-app

./: README.md  build.gradle  settings.gradle
app/: build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  api.cpp  api_token.cpp  authentication.cpp  location.cpp
app/src/main/res/anim/: bottom_animation.xml  from_left.xml  from_right.xml  started_button_intro_activity.xml  to_left.xml  to_right.xml
app/src/main/res/drawable/: book_info_bg.xml  books_my_friend_logo.xml  custom_radio_selected.xml  custom_radio_selector.xml  custom_radio_unselected.xml  g_add_icon.xml  g_dark_icon.xml  g_delete_icon.xml  g_font_icon.xml  g_language_icon.xml  g_light_theme.xml  g_notifications_icon.xml  g_settings_icon.xml  g_sync_update_icon.xml  g_update_icon.xml  ic_add_icon.xml  ic_avater_icon.xml  ic_cloud_upload.xml  ic_connect_icon.xml  ic_dashboard_icon.xml  ic_download.xml  ic_eye_icon.xml  ic_favorite_icon.xml  ic_female_icon.xml  ic_file_download.xml  ic_home_icon.xml  ic_invite_icon.xml  ic_justify_icon.xml  ic_launcher_foreground.xml  ic_left_icon.xml  ic_link_icon.xml  ic_male_icon.xml  ic_more_icon.xml  ic_my_books.xml  ic_notification_icon.xml  ic_privacy_policy_icon.xml  ic_reviews_icon.xml  ic_search_icon.xml  ic_setting_icon.xml  ic_sms_otp_design.xml  (+12 more)
app/src/main/res/layout/: activity_auth_user.xml  activity_create_my_book.xml  activity_intro.xml  activity_main.xml  activity_notification_show.xml  activity_welcome.xml  design_loading_button.xml  (+34 more)
docs/: contributing.md
gradle/wrapper/: gradle-wrapper.properties
(+130 files in other folders)
